--- a/index.html
+++ b/index.html
@@ -211,66 +211,66 @@
                 <h2>This Week</h2>
                 <div class="today" id="current-temp">
                     
-                    <div class="wDay">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1163/1163763.png" alt="weather-icon" class="" id="todayIcon">
+                    <div class="wDay" id="todayIcon">
+                        <img src="https://cdn-icons-png.flaticon.com/512/1163/1163763.png" alt="weather-icon" class="" >
                         <h2>Today</h2>
                     </div>
                     <div>
                         <div class="today-items">
                             <div><h3>Min</h3></div>
-                            <div class="temp"><h3>15°C</h3></div>
+                            <div class="temp" id="today_min"><h3>15°C</h3></div>
                         </div>
                         <div class="today-items">
                             <div><h3>Max</h3></div>
-                            <div class="temp"><h3>27°C</h3></div>
+                            <div class="temp" id="today_max"><h3>27°C</h3></div>
                         </div>
                         <div class="today-items">
                             <div><h3>Sunrise</h3></div>
-                            <div class="temp"><h3>06:00 am</h3></div>
+                            <div class="temp" id="today_sunrise"><h3>06:00 am</h3></div>
                         </div>
                         <div class="today-items">
                             <div><h3>Sunset</h3></div>
-                            <div class="temp"><h3>06:00 pm</h3></div>
+                            <div class="temp" id="today_sunset"><h3>06:00 pm</h3></div>
                         </div>
                     </div>
                     
                 </div>
                 <div class="weather-forecast" id="weather-forecast">
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
+                        <div id="wicon1"><img src="" alt="weather-icon" class="w-icon"></div>
                         <div class="day"><h5>Tommorow</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max 27°C</h5></div>
+                        <div class="temp" id="tempMin1"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax1"><h5>Max 27°C</h5></div>
                     </div>
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
-                        <div class="day"><h5>Tuesday</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max  27°C</h5></div>
+                        <div id="wicon2"><img src="" alt="weather-icon" class="w-icon"></div>
+                        <div class="day" id="day2"><h5>Tuesday</h5></div>
+                        <div class="temp" id="tempMin2"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax2"><h5>Max  27°C</h5></div>
                     </div>
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
-                        <div class="day"><h5>Wednesday</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max  27°C</h5></div>
+                        <div id="wicon3"><img src="" alt="weather-icon" class="w-icon"></div>
+                        <div class="day" id="day3"><h5>Wednesday</h5></div>
+                        <div class="temp" id="tempMin3"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax3"><h5>Max  27°C</h5></div>
                     </div>
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
-                        <div class="day"><h5>Thursday</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max  27°C</h5></div>
+                        <div id="wicon4"><img src="" alt="weather-icon" class="w-icon"></div>
+                        <div class="day" id="day4"><h5>Thursday</h5></div>
+                        <div class="temp" id="tempMin4"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax4"><h5>Max  27°C</h5></div>
                     </div>
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
-                        <div class="day"><h5>Friday</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max  27°C</h5></div>
+                        <div id="wicon5"><img src="" alt="weather-icon" class="w-icon"></div>
+                        <div class="day" id="day5"><h5>Friday</h5></div>
+                        <div class="temp" id="tempMin5"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax5"><h5>Max  27°C</h5></div>
                     </div>
                     <div class="weather-forecast-item">
-                        <img src="" alt="weather-icon" class="w-icon">
-                        <div class="day"><h5>Saturday</h5></div>
-                        <div class="temp"><h5>Min  15°C</h5></div>
-                        <div class="temp"><h5>Max  27°C</h5></div>
+                        <div id="wicon6"><img src="" alt="weather-icon" class="w-icon"></div>
+                        <div class="day" id="day6"><h5>Saturday</h5></div>
+                        <div class="temp" id="tempMin6"><h5>Min  15°C</h5></div>
+                        <div class="temp" id="tempMax6"><h5>Max  27°C</h5></div>
                     </div>
                 </div>
             </div>
